# haskell-meetup-hsqml

./: .gitignore  README.md
ex1_qml_with_cpp/: Makefile  README.md  ex1.cpp  ex1.pro  ex1.qml
ex2_qml_basics/: README.md  ex2.qml
ex3_qml_qtquick/: README.md  ex3.qml
ex4_qml_ui/: README.md  ex4.qml
ex4b_hsqml/: CountTimer.qml  Ex4.hs  Ex4_simple.hs  README.md  ex4.cabal  ex4.qml
ex5_hsqml/: README.md  ex5.cabal  stack.yaml
ex5_hsqml/app/: Main.hs
ex5_hsqml/data/: test.db
ex5_hsqml/lib/: DB.hs
ex5_hsqml/qml/: StackLayoutX.qml  StretchButton.qml  UniformWidthRow.qml  main.qml
