name:                ex5
version:             0.1
synopsis:            A more involved example demonstrating HsQML
license:             PublicDomain
author:              Johannes W.
build-type:          Simple
cabal-version:       >=1.10
data-files:          qml/*.qml data/test.db

library 
  hs-source-dirs:      lib
  exposed-modules:     DB
  other-modules:       Paths_ex5
  build-depends:       base >= 4.8 && < 5
                     , hsqml >= 0.3.4.1
                     , selda >= 0.1.10
                     , selda-sqlite >= 0.1.6
  default-language:    Haskell2010

executable Ex5
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_ex5
  build-depends:       base
                     , text
                     , vector
                     , hsqml
                     , ex5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
